--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	</style>
 </head>
 <body>
+<img src="logo.jpg" style="min-width:100%;max-height:100%">
 <audio controls style="display:none" autoplay loop>
 	<source src="ch.mp3" type="audio/mpeg">
 	<source src="ch.mp3" type="audio/mpeg">
